SideNav | custom | container tag, fixed: subitem collapse

--- a/src/components/MySideNav/MySideNav.css
+++ b/src/components/MySideNav/MySideNav.css
@@ -36,6 +36,10 @@
     display: none;
 }
 
+.MySideNav-SubTitle{
+
+}
+
 .MySideNav-SubItem-Expanded{
     display:block;
 }
